Rapid Prd/src/objects/Marble__c.object
<CustomObject>
    <description>Custom Object to house all our Broker Out Leads / Opportunities</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marbles</relationshipLabel>
        <relationshipName>Marbles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accountable__c</fullName>
        <formula>IF(
   OR(  
        State_of_Operation__c = &apos;CA&apos;
      , State_of_Operation__c = &apos;NY&apos;
      , State_of_Operation__c = &apos;HI&apos;
      , FICO_Score__c &lt; 540
      , Credit_Inquiries_Last_90_Days__c &gt; 8
      , QC_Monthly_Sales__c &lt; 5000
      , Ave_Number_of_Deposits_per_Month__c &lt; 4
      , Average_Monthly_Negative_Balance__c &gt; 3
      , Business_Open_Date__c &gt; (Today() - (30*8))
      , Industry__r.Accountable__c = TRUE
      , Average_Balancce__c &lt; 1000
      , Current_Bank_Balance__c &lt; 0
      , ispickval(Citizenship_Status__c,&apos;Visa&apos;)
      , ispickval(Citizenship_Status__c,&apos;Green Card&apos;)
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , Soft_Pull_Only__c = TRUE
      , Last_Funded_Date__c &gt; (Today() - (30*3))

      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &gt; 0
        )
      , AND( FICO_Score__c &lt; 540
               ,OR(QC_Monthly_Sales__c &lt; 10000
                 , Ave_Number_of_Deposits_per_Month__c &lt; 10
                 , Average_Monthly_Negative_Balance__c &gt; 2
                 , Business_Open_Date__c &gt; (Today() - (30*12))
                 , Average_Balancce__c &lt; 1500
                 )
              )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 1 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 15000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.4 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;ACCOUNTABLE APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accountable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Software_Used__c</fullName>
        <label>Accounting Software Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_to_Five9_List__c</fullName>
        <label>Add to Five9 List</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Owner_s_Not_on_Application__c</fullName>
        <label>Additional Owner(s) Not on Application?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileCap__c</fullName>
        <formula>IF(
   OR(  
        FICO_Score__c &lt; 520
      , QC_Monthly_Sales__c &lt; 8000
      , Business_Open_Date__c &gt; (Today() - (30*12))
      , Industry__r.AgileCap__c = TRUE 
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,  Industry__r.Name &lt;&gt; &apos;Insurance&apos;
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 10 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 5000000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;AGILECAP APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AgileCap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Time__c</fullName>
        <label>Approved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Aquila_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aquila Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aquila_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aquila Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aquila_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aquila Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aquila__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;WV&apos;
        */
        /*
        FICO_Score__c &lt; 500
        */
        /*
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
        QC_Monthly_Sales__c &lt; 6000
      , Ave_Number_of_Deposits_per_Month__c &lt; 2
      , Average_Monthly_Negative_Balance__c &gt; 5
      , Business_Open_Date__c &gt; (Today() - (30*6))
      , Industry__r.Aquila__c = TRUE 
      , Average_Balancce__c &lt; 900
      ,  Current_Bank_Balance__c &lt; 0
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        /*
      , Soft_Pull_Only__c = TRUE
        */
      , MCA_Only__c = TRUE
      , No_Daily_Payment__c  = TRUE
      ,
        /*
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
       */
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 3 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 0 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 0 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 1 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;AQUILA APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aquila</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atlantis_Mortgage__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;&apos;
        */
        FICO_Score__c &lt; 600
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
        /* uncomment if necessary
      , QC_Monthly_Sales__c &lt; 15000
        */
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
        /* uncomment if necessary
      , Average_Monthly_Negative_Balance__c &gt; 5
        */
        /* uncomment if necessary
      , Business_Open_Date__c &gt; (Today() - (30*24))
        */
        /* uncomment if necessary
      , Bankruptcy_Discharge_Date__c &gt; (today()-(30*36))
        */
        /* uncomment if necessary
      , Industry__r.Atlantis_Mortgage__c  = TRUE
        */
        /* uncomment if necessary
      , Average_Balancce__c &lt; 0
        */
        /* uncomment if necessary
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
      , Soft_Pull_Only__c = TRUE
      , MCA_Only__c = TRUE
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            OR(
                 Position__c &gt;= Number_of_Competitor_Balances__c
               , Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
              )
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 0 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 0 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;ATLANTIS MORTGAGE APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Atlantis Mortgage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ave_Number_of_Deposits_per_Month__c</fullName>
        <label>Ave Number of Deposits per Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Balancce__c</fullName>
        <inlineHelpText>What is the clients average balance on their business banking account?</inlineHelpText>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Negative_Balance__c</fullName>
        <label>Average Monthly Negative Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BFS_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFS Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BFS_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFS Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BFS_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFS Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BFS__c</fullName>
        <formula>IF( 
OR(

/* uncomment if necessary
State_of_Operation__c = &apos;&apos;
*/
 
FICO_Score__c &lt; 550

/* uncomment if necessary 
, Credit_Inquiries_Last_90_Days__c &gt; 15 
*/

/* uncomment if necessary
, QC_Monthly_Sales__c &lt; 12000
*/

/* uncomment if necessary 
, Ave_Number_of_Deposits_per_Month__c &lt; 3 
*/

, Average_Monthly_Negative_Balance__c &gt; 3 
, Business_Open_Date__c &gt; (Today() - (30*24))  
, Industry__r.BFS__c = TRUE 
, Average_Balancce__c &lt; 1500
, Current_Bank_Balance__c &lt; 0
, ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
, RapidAdvance_Balance__c = TRUE
, Last_Funded_Date__c &gt; (Today() - (30*2)) 

/* uncomment if necessary 
, Soft_Pull_Only__c = TRUE 
*/ 

,
AND( 
Bankruptcy__c = TRUE
,OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*0))
,ISNULL(Bankruptcy_Discharge_Date__c)
)
)

, 
AND( 
Tax_Liens__c = FALSE 
, Tax_Lien_Balance__c &gt; 100000 
) 
, 
AND( 
Tax_Liens__c = TRUE 
, Tax_Lien_Balance__c &lt; 0 
) 
,
        AND(
              OR(
                  Industry__r.Name = &apos;Trucking&apos; 
                 ,Industry__r.Name = &apos;Limousine&apos;
                 ,Industry__r.Name = &apos;Car Service&apos;
                 )
             ,OR( 
                  Business_Open_Date__c &gt; (today() - (30*36))
                 ,FICO_Score__c &lt; 625
                 )
            )
      ,
        AND(
              Industry__r.Name = &apos;Construction&apos; 
             ,OR( 
                  Business_Open_Date__c &gt; (today() - (30*60))
                 ,FICO_Score__c &lt; 625
                 )
        )
      , 
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 2 /*Max # of Payoffs*/
                 /*uncomment if necessary
               , Sum_of_Competitor_Balances__c &gt; 75000 
                 */
               , if(Number_of_Competitor_Balances__c &gt; 1
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.75 /*Balance Net % with &gt; 1 competitor balances*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.5 /*Balance Net % with 1 competitor balance*/
              )
              )
          )
) 
, &quot;&quot; 
, &quot;BFS APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BFS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOOP_Status__c</fullName>
        <label>BOOP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Discharge_Date__c</fullName>
        <label>Bankruptcy Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Open_Date__c</fullName>
        <formula>Opportunity_Reference__r.Business_Open_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CNH_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNH Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNH_Finance__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;WV&apos;
        */
        /* uncomment if necessary
        FICO_Score__c &lt; 500
        */
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
        QC_Monthly_Sales__c &lt; 1000000
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
        /* uncomment if necessary
      , Average_Monthly_Negative_Balance__c &gt; 5
        */
      , Business_Open_Date__c &gt; (Today() - (30*12))
        /* uncomment if necessary
      , Industry__r.CNH__c = TRUE
        */
        /* uncomment if necessary 
      , Average_Balancce__c &lt; 0
        */
        /* uncomment if necessary
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
      , MCA_Only__c = TRUE
        */
        /* uncomment if necessary
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
        */
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 10000
        ) 
        /* uncomment if necessary
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
        */
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 10 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 9 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 100000000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;CNH FINANCE APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNH Finance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNH_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNH Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNH_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNH Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONSTRUCTION_FINANCE__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;&apos;
        */
        /* uncomment if necessary
      , FICO_Score__c &lt; 500
        */
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
        /* uncomment if necessary
      , QC_Monthly_Sales__c &lt; 10000
        */
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
        /* uncomment if necessary
      , Average_Monthly_Negative_Balance__c &gt; 5
        */
        /* uncomment if necessary
      , Business_Open_Date__c &gt; (Today() - (30*6))
        */
        
        Industry__r.Name != &apos;Construction&apos;

      , Receivables_or_Unpaid_Invoices__c = FALSE
       
        /* uncomment if necessary
      , Average_Balancce__c &lt; 0
        */
        /* uncomment if necessary 
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
        */
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      , MCA_Only__c = TRUE
        /* uncomment if necessary
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
        */
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            AND(
                 Position__c &gt;= Number_of_Competitor_Balances__c
               , Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
              )
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 0 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 0 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;CONSTRUCTION FINANCE APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CONSTRUCTION FINANCE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Link2__c</fullName>
        <formula>IF( ISNULL(Opportunity_Reference__c ), Hyperlink(Lead_Reference__r.CALC_Link__c,&quot;Calc Link&quot;) , Opportunity_Reference__r.CALC_Link__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Link__c</fullName>
        <label>Calc Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Status__c</fullName>
        <inlineHelpText>If &quot;Visa&quot;, must be valid for life of financing.</inlineHelpText>
        <label>Citizenship Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full US Citizen</fullName>
                </value>
                <value>
                    <fullName>Green Card</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_DBA__c</fullName>
        <formula>Opportunity_Reference__r.DBA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company DBA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>List all competitors with a balance on each line</description>
        <label>Competitors:</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Construction_Finance_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Finance Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Finance_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Finance Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Finance_sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Finance Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Request__c</fullName>
        <label>Contract Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credibly__c</fullName>
        <formula>IF(
   OR(  
        FICO_Score__c &lt; 500
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 20
        */
      , QC_Monthly_Sales__c &lt; 15000
      , Ave_Number_of_Deposits_per_Month__c &lt; 1
      , Average_Monthly_Negative_Balance__c &gt; 7
      , Business_Open_Date__c &gt; (Today() - (30*6))
      , Industry__r.Credibly__c = TRUE 
      , Average_Balancce__c &lt; 1000
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)

        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*6))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 3 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 2 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 125000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.5 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;CREDIBLY APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credibly</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Inquiries_Last_90_Days__c</fullName>
        <inlineHelpText>How many credit inquiries has the client had on their credit report in the last 90 days?</inlineHelpText>
        <label>Credit Inquiries (Last 90 Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Bank_Balance__c</fullName>
        <inlineHelpText>How much is currently available in the client&apos;s primary bank account?</inlineHelpText>
        <label>Current Bank Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decline_Reason__c</fullName>
        <label>Decline Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Statement Disqualification</fullName>
                </value>
                <value>
                    <fullName>Business Type</fullName>
                </value>
                <value>
                    <fullName>Competitor Balance / UCC(s)</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Tax Lien(s)</fullName>
                </value>
                <value>
                    <fullName>Time in Business</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Client Withdrawal - No Response</fullName>
                </value>
                <value>
                    <fullName>Client Withdrawal - Cost</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Qualified at Rapid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delete_from_Five9_Lists__c</fullName>
        <label>Delete from Five9 Lists</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <formula>HYPERLINK(&quot;file://ra-fsv/office2/BOBADOCS&quot; ,&quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECG_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECG Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECG_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECG Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECG_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECG Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECG__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;WV&apos;
        */
        FICO_Score__c &lt; 500
      , Credit_Inquiries_Last_90_Days__c &gt; 20
      , QC_Monthly_Sales__c &lt; 10000
      , Ave_Number_of_Deposits_per_Month__c &lt; 2
      , Average_Monthly_Negative_Balance__c &gt; 5
      , Business_Open_Date__c &gt; (Today() - (30*6))
      , Industry__r.ECG__c = TRUE 
      , Average_Balancce__c &lt; 0
      , Current_Bank_Balance__c &lt; 0
      , ispickval(Citizenship_Status__c,&apos;Visa&apos;)
      , ispickval(Citizenship_Status__c,&apos;Green Card&apos;)
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , Soft_Pull_Only__c = TRUE
      , MCA_Only__c = TRUE
      , Last_Funded_Date__c &gt; (Today() - (20*1))
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(1))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; (0.50 * QC_Monthly_Sales__c)
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 3 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 1 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 150000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.5 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, IF(  ispickval(Decline_Reason__c,&quot;Qualified at Rapid&quot;) ,&quot;||OVERQUALIFIED||&quot;
, &quot;ECG APPROVED&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ECG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Sole Prop</fullName>
                </value>
                <value>
                    <fullName>C-Corp</fullName>
                </value>
                <value>
                    <fullName>S-Corp</fullName>
                </value>
                <value>
                    <fullName>GP</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FICO_Score__c</fullName>
        <formula>Opportunity_Reference__r.CALC_FICO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FICO Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FORA_Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FORA Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FORA_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FORA Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FORA_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FORA Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FORA__c</fullName>
        <formula>IF(
   OR(
        State_of_Operation__c = &apos;WV&apos;
      , FICO_Score__c &lt; 500
      , Credit_Inquiries_Last_90_Days__c &gt; 15
      , QC_Monthly_Sales__c &lt; 12000
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
      , Average_Monthly_Negative_Balance__c &gt; 4
      , Sum_of_Competitor_Balances__c &gt; 100000
      , Business_Open_Date__c &gt; (Today() - (30*6))
      , Industry__r.FORA__c = TRUE
      , Average_Balancce__c &lt; 1000
      , Current_Bank_Balance__c &lt; 0
      , ispickval(Citizenship_Status__c,&apos;Visa&apos;)
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , RapidAdvance_Balance__c = TRUE
/* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
*/
      ,
       AND( 
            Bankruptcy__c = TRUE
           , OR( Bankruptcy_Discharge_Date__c &gt; (today()-(30*2))
                ,ISNULL(Bankruptcy_Discharge_Date__c)
               )
           )
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &gt; 200000
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
      ,
        IF( 
            Position__c &gt; 1 /*Fixed - DON&apos;T CHANGE VALUE FOR ANY PARTNER*/
          ,  
            Number_of_Competitor_Balances__c &gt;= 1 /*Deepest Position*/
          , 
            OR(
                 Number_of_Competitor_Balances__c &gt; 1 /*Max # of Payoffs*/
               , Sum_of_Competitor_Balances__c &gt; 100000 /*Max Payoff Amount*/
               , 1 -(Sum_of_Competitor_Balances__c / QC_Monthly_Sales__c) &lt; 0.5 /*Balance Net %*/
              )
          )
)
, &quot;&quot;
, &quot;FORA APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FORA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundBox__c</fullName>
        <formula>IF(
   OR(  /* uncomment if necessary
        State_of_Operation__c = &apos;&apos;
        */
        /* uncomment if necessary
      , FICO_Score__c &lt; 680
        */
        /* uncomment if necessary
      , Credit_Inquiries_Last_90_Days__c &gt; 10
        */
        QC_Monthly_Sales__c &lt; 2000
        /* uncomment if necessary
      , Ave_Number_of_Deposits_per_Month__c &lt; 3
        */
      , Average_Monthly_Negative_Balance__c &gt; 10
      , Business_Open_Date__c &gt; (Today() - (30*3))
      , Bankruptcy_Discharge_Date__c &gt; (today()-(1))
      ,  Industry__r.Fundbox__c = TRUE
      , Average_Balancce__c &lt; 500
        /* uncomment if necessary
      , ispickval(Entity_Type__c,&apos;Non-Profit&apos;)
      , RapidAdvance_Balance__c = TRUE 
        */
        /* uncomment if necessary
      , Soft_Pull_Only__c = TRUE
        */
      , MCA_Only__c = TRUE
        /* uncomment if necessary
      ,
        AND(
              Tax_Liens__c = FALSE
            , Tax_Lien_Balance__c &lt; 0
        ) 
      , 
        AND(
              Tax_Liens__c = TRUE
            , Tax_Lien_Balance__c &lt; 0
        )
        */
)
, &quot;&quot;
, &quot;FUNDBOX APPROVED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FundBox</label>
        <type>Text</type>
    </fields>
</CustomObject>